GSF - DATABASE config - DONE

--- a/gsf.api/src/main/resources/application.properties
+++ b/gsf.api/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 
-server.port=8081
+## Alternative server Port
+#server.port=8081
+
+## IP Externo
+spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+## IP Local
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=naruto
+spring.datasource.password=swoordfish
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
