--- a/gsf.api/src/main/resources/application.properties
+++ b/gsf.api/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 #server.port=8081
 
 ## IP Externo
-spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+# FULLConfig - spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useTimezone=true&serverTimezone=UTC
 ## IP Local
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=naruto
