GSF - HIBERNATE CONFIGS

--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -34,8 +34,6 @@ spring.datasource.validationQuery = SELECT 1
 # = JPA / HIBERNATE
 # ===============================
 
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
-
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager).
 
@@ -45,7 +43,7 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-# spring.jpa.hibernate.ddl-auto = update
+####  # NAO RECOMENDADO spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
