--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -18,7 +18,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # IP LOCAL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_2?useTimezone=true&serverTimezone=UTC
 
 # Username and password
 spring.datasource.username=naruto
