--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -12,13 +12,13 @@
 
 # IP EXTERNO
 #spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-# spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useTimezone=true&serverTimezone=UTC
+
+# IP LOCAL
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
 
 # MySql Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# IP LOCAL
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_2?useTimezone=true&serverTimezone=UTC
 
 # Username and password
 spring.datasource.username=naruto
