--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 
 # IP EXTERNO
 #spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
 
 # IP LOCAL
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
@@ -48,5 +48,6 @@ spring.jpa.show-sql = true
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
