--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -48,6 +48,6 @@ spring.jpa.show-sql = true
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
-spring.jpa.hibernate.use-new-id-generator-mappings=false
+# spring.jpa.hibernate.use-new-id-generator-mappings=false
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
