--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -12,10 +12,10 @@
 
 # IP EXTERNO
 #spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
+# spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
 
 # IP LOCAL
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
 
 # MySql Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -25,9 +25,9 @@ spring.datasource.username=naruto
 spring.datasource.password=swoordfish
 
 
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+## Keep the connection alive if idle for a long time (needed in production)
+# spring.datasource.testWhileIdle = true
+# spring.datasource.validationQuery = SELECT 1
 
 
 # ===============================
@@ -43,7 +43,8 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-####  # NAO RECOMENDADO spring.jpa.hibernate.ddl-auto = update
+####  # NAO RECOMENDADO
+#spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
