--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -37,8 +37,18 @@ spring.datasource.password=swoordfish
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager).
 
+## WITH JPA
 # Show or not log for each sql query
-spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.show_sql = true
+#spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.use_sql_comments = true
+spring.jpa.properties.hibernate.format_sql = true
+
+## -- WITH HIBERNATE
+# show sql statement
+#logging.level.org.hibernate.SQL=debug
+# show sql values
+#logging.level.org.hibernate.type.descriptor.sql=trace
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
@@ -52,3 +62,6 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # spring.jpa.hibernate.use-new-id-generator-mappings=false
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+# LOG IN FILE
+#https://stackoverflow.com/questions/30118683/how-to-log-sql-statements-in-spring-boot
