--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -29,8 +29,12 @@ spring.datasource.password=swoordfish
 # spring.datasource.testWhileIdle = true
 # spring.datasource.validationQuery = SELECT 1
 
-spring.mvc.view.prefix: /WEB-INF/views/
-spring.mvc.view.suffix: .jsp
+# ===============================
+# = MVC Config / VIEWS
+# ===============================
+
+spring.mvc.view.prefix= /WEB-INF/views/
+spring.mvc.view.suffix= .jsp
 
 # ===============================
 # = JPA / HIBERNATE
