Revert "Merge remote-tracking branch 'origin/gsf-dev-bruna' into gsf-dev"
This reverts commit 3e51b6bd2f2f477023e0254950605d8691facc6e, reversing
changes made to 82ce05322f7a03ac02629be53c48ab9250fd254f.

--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 
 ## Alternative server Port
-server.port=8081
+server.port=8080
 
 
 # ===============================
@@ -29,7 +29,11 @@ spring.datasource.password=swoordfish
 # spring.datasource.testWhileIdle = true
 # spring.datasource.validationQuery = SELECT 1
 
-spring.mvc.view.prefix=/WEB-INF/views/
+# ===============================
+# = MVC Config / VIEWS
+# ===============================
+
+spring.mvc.view.prefix= /WEB-INF/views/
 spring.mvc.view.suffix= .jsp
 
 # ===============================
