--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -7,27 +7,32 @@ server.port=8080
 
 
 # ===============================
-# = DATA SOURCE
+# = DATABASE
 # ===============================
 
-# IP EXTERNO
-#spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
+### >> H2 /////////////
+spring.datasource.url=jdbc:h2:file:~/databases/H2/db_alex_at
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+### >> H2 CONSOLE =  http://localhost:8080/h2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-allow-others=false
 
-# IP LOCAL
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
+### >> MYSQL /////////////
+##### spring.datasource.url=jdbc:mysql://177.148.119.35:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/infnet_alex_at?useTimezone=true&serverTimezone=UTC
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=naruto
+#spring.datasource.password=swoordfish
 
-# MySql Driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Username and password
-spring.datasource.username=naruto
-spring.datasource.password=swoordfish
-
-
-## Keep the connection alive if idle for a long time (needed in production)
+### Keep the connection alive if idle for a long time (needed in production)
 # spring.datasource.testWhileIdle = true
 # spring.datasource.validationQuery = SELECT 1
+
 
 # ===============================
 # = MVC Config / VIEWS
