--- a/gsf-api/src/main/resources/application.properties
+++ b/gsf-api/src/main/resources/application.properties
@@ -12,7 +12,8 @@ server.port=8081
 
 # IP EXTERNO
 #spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
 
 # IP LOCAL
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3306/gsf_dev_4?useTimezone=true&serverTimezone=UTC
@@ -21,8 +22,8 @@ spring.datasource.url=jdbc:mysql://177.148.119.35:3306/gsf_dev_4?useTimezone=tru
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Username and password
-spring.datasource.username=naruto
-spring.datasource.password=swoordfish
+spring.datasource.username=root
+spring.datasource.password=
 
 
 ## Keep the connection alive if idle for a long time (needed in production)
@@ -56,7 +57,7 @@ spring.jpa.properties.hibernate.format_sql = true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 ####  # NAO RECOMENDADO
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
